Lesson 9: add search & filters (web, api) (#12)
